@startuml Todo
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
    -id: ObjectID <<generated>>
    --
    userName : string
    createdAt: Date
    updatedAt: Date
    role : Role
}


entity "Project" as project {
    -id: ObjectID <<generated>>
    --
    ~ createdBy: ObjectID
    ~ updatedBy: objectID
    --
    name : string
    status: Status
    createdAt: Date
    updatedAt: Date
}


entity "UserProject" as userproject {
    -id: ObjectID <<generated>>
    --
    ~ projectId: ObjectID
    ~ userId: ObjectID
    --
    createdAt: Date
    updatedAt: Date
}

entity "UserWithPassword" as userwithpassword {
    -id: ObjectID <<generated>>
    --
    ~ userId: ObjectID
    --
    password: string
}

entity "UserCredentials" as usercredentials {
    -id: ObjectID <<generated>>
    --
    ~ userId: ObjectID
    --
    password: string
}

entity "Task" as task {
    -id: ObjectID <<generated>>
    --
    ~ projectId: ObjectID
    ~ createdBy: ObjectID
    ~ updatedBy: objectID
    ~ userId: ObjectID
    ~ linkedToTask: ObjectID
    --
    name : string
    status: Status
    createdAt: Date
    updatedAt: Date
    isCreatedByAdmin: boolean;

}

enum Status {
    + DONE
    + NOT_START_YET
    + ONGOING
}


enum Role {
    + ADMIN
    + USER
}

userproject }|--|| user
userproject }|--|| project

task }|--|| project
task }|--|| user

user -- Role
task -- Status
project -- Status

usercredentials ||--|| user
userwithpassword ||--|| user

@enduml
